--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900" rel="stylesheet">
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500" rel="stylesheet">
+    <title>Michael W McDevitt</title>
   </head>
   <body>
     <noscript>
